--- a/2-PHP-networks/docker_assets/myapp.conf
+++ b/2-PHP-networks/docker_assets/myapp.conf
@@ -11,7 +11,7 @@ server {
     error_log   /var/log/nginx/error.log;
     location ~ \.php$ {
         fastcgi_index   index.php;
-        fastcgi_pass    test-php-fpm:9000;
+        fastcgi_pass    1.1.1.1:9000;
         include         fastcgi_params;
         include         fastcgi.conf;
         fastcgi_param   SCRIPT_FILENAME    $document_root$fastcgi_script_name;
