--- a/5-docker-compose/DockerfilePHP
+++ b/5-docker-compose/DockerfilePHP
@@ -9,11 +9,14 @@ php-pear \
 php56-cli \
 php56-common \
 php56-fpm \
+php56-soap \
 php56-pecl-redis
 
 RUN sed -e 's/127.0.0.1:9000/9000/' \
         -e '/allowed_clients/d' \
+        -e '/catch_workers_output/s/^;//' \
         -e 's/;clear_env/clear_env/' \
+        -e '/error_log/d' \
         -i /etc/php-fpm.d/www.conf 
 RUN mkdir -p /www/myapp
 
@@ -22,5 +25,3 @@ RUN chmod +x /docker-entrypoint.sh
 ENTRYPOINT ["/docker-entrypoint.sh"]
 
 CMD /usr/sbin/php-fpm --nodaemonize
-
-
