--- a/5-docker-compose/Dockerfile
+++ b/5-docker-compose/Dockerfile
@@ -4,15 +4,10 @@ RUN yum clean all && yum update -y && yum install -y \
 sudo
 
 RUN yum install -y \
-php56 \
-nginx install \
-nmap
+nginx install
 
 RUN mkdir -p /www/myapp
 WORKDIR /www/myapp
-
-LABEL maintainer="Andrés Velasco <avc.conti@gmail.com>" \
-      version="1.0"
 
 COPY docker_assets/myapp.conf /etc/nginx/conf.d/
 COPY docker_assets/nginx.conf /etc/nginx/
