--- a/2-PHP-networks/Dockerfile
+++ b/2-PHP-networks/Dockerfile
@@ -16,4 +16,6 @@ COPY docker_assets/nginx.conf /etc/nginx/
 RUN ln -sf /dev/stdout /var/log/nginx/access.log
 RUN ln -sf /dev/stderr /var/log/nginx/error.log
 
+COPY . .
+
 CMD ["nginx", "-g", "daemon off;"]
