--- a/2-PHP-networks/DockerfilePHP
+++ b/2-PHP-networks/DockerfilePHP
@@ -18,6 +18,9 @@ RUN sed -e 's/127.0.0.1:9000/9000/' \
         -i /etc/php-fpm.d/www.conf 
 
 RUN mkdir -p /www/myapp
+WORKDIR /www/myapp
+
+COPY . .
 
 CMD /usr/sbin/php-fpm --nodaemonize
 
