[-] rmeoved volume-from from exercise 5

--- a/5-docker-compose/DockerfilePHP
+++ b/5-docker-compose/DockerfilePHP
@@ -10,18 +10,23 @@ php56-cli \
 php56-common \
 php56-fpm \
 php56-soap \
-php56-pecl-redis
+php56-pecl-redis 
 
 RUN sed -e 's/127.0.0.1:9000/9000/' \
         -e '/allowed_clients/d' \
         -e '/catch_workers_output/s/^;//' \
-        -e 's/;clear_env/clear_env/' \
         -e '/error_log/d' \
         -i /etc/php-fpm.d/www.conf 
+
 RUN mkdir -p /www/myapp
+WORKDIR /www/myapp
+
+COPY . .
 
 COPY docker-entrypoint.sh /
 RUN chmod +x /docker-entrypoint.sh
 ENTRYPOINT ["/docker-entrypoint.sh"]
 
 CMD /usr/sbin/php-fpm --nodaemonize
+
+
